fix: использовать Deque вместо List для LinkedList